Fixed issue on mobile where h1 for a specific query was a font size too big

--- a/wwwroot/scss/mobile.scss
+++ b/wwwroot/scss/mobile.scss
@@ -76,10 +76,10 @@
         top: 5%;
         overflow: hidden;
     }
-	
+
 	h1 
 	{
-		font: 400 125% $psfont;
+		font: 400 110% $psfont;
 		margin: 0;
 	}
 
